Ensure search widget doesn't LF on iPhone SE
And latest autoprefixer results. Fixes #156. Thanks Philippe.

--- a/src/assets/sass/modules/_layout-shared.scss
+++ b/src/assets/sass/modules/_layout-shared.scss
@@ -120,6 +120,10 @@ hr {
     }
 }
 
+.txp-search-input {
+    max-width: calc(100% - 5.5rem);
+}
+
 .txp-search-clear {
     flex: 1;
     margin: auto 0.5em;
